added updateOrder and modified operator endpoint